<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_gray_900"
    tools:context=".detail.DetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|enterAlways">

            <ImageView
                android:id="@+id/image_movie"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:scaleType="fitXY"
                android:layout_alignParentStart="true"
                android:layout_margin="14dp"
                android:layout_alignParentTop="true"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/title_movie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Title Movie"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:layout_toEndOf="@id/image_movie"/>

            <ImageView
                android:id="@+id/image_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_stars"
                android:layout_marginTop="4dp"
                android:layout_toEndOf="@id/image_movie"
                android:layout_below="@id/title_movie"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Rating"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="4dp"
                android:layout_toEndOf="@id/image_rate"
                android:layout_below="@id/title_movie"/>
        </RelativeLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <include android:id="@+id/item_detail" layout="@layout/items_description"/>
    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/status_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:fabSize="normal"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:src="@drawable/ic_favorite_border"
        tools:ignore="ContentDescription" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>