<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipe_refresh_movie"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".favorite.movie.MovieFavorite">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_movie_favorite"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/items_movie"/>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>